[package]
name = "cloud-sealer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
lazy_static = "1.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.46"
filecoin-proofs = { path = "../filecoin-proof-DEBUG", version = "8.0.2", default-features = false }
#filecoin-proofs-api = { version = "8.0.1" }
storage-proofs-core = { version = "8.0.3" }
#filecoin-proofs = { version = "8.0.2" }
paired = { version = "0.22.0" }
anyhow = { version = "1.0.42" }
unsigned-varint = "0.7.0"
resize-slice = "0.1.3"
filecoin-hashers = "3.0.3"
serde = { version = "1.0", features = ["rc", "derive"] }
base64-url = "1.4.10"
bellperson = { path = "../entysnark"}
storage-proofs-porep = { path = "../enty-porep" }