[package]
name = "cloud-sealer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
lazy_static = "1.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.46"
filecoin-proofs = "8.0.2"
filecoin-proofs-api = { version = "8.0.1" }
storage-proofs-core = { version = "8.0.3" }
#filecoin-proofs = { version = "8.0.2" }
paired = { version = "0.22.0" }
anyhow = { version = "1.0.42" }
unsigned-varint = "0.7.0"
resize-slice = "0.1.3"
filecoin-hashers = "3.0.3"
serde = { version = "1.0", features = ["rc", "derive"] }
base64-url = "1.4.10"
ffi-toolkit = "0.5.0"

#bellperson = { version = "0.14.1", default-features = false }
#fr32 = { version = "~1.0", default-features = false }

#[features]
#default = ["pairing", "gpu"]
#blst = ["filecoin-proofs/blst", "bellperson/blst", "storage-proofs-core/blst", "fr32/blst"]
#gpu = ["filecoin-proofs/gpu", "filecoin-hashers/gpu", "storage-proofs-core/gpu", "bellperson/gpu", "fr32/gpu"]
#pairing = ["filecoin-proofs/pairing", "bellperson/pairing", "storage-proofs-core/pairing", "fr32/pairing"]


[patch.crates-io]
bellperson = { path = "../entysnark" , default-features = false }
filecoin-proofs = { path = "../filecoin-proof-debug" , default-features = false }



