[package]
name = "cloud-sealer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
lazy_static = "1.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.46"
filecoin-proofs = "8.0.2"
storage-proofs-core = { version = "8.0.3" }
bellperson = "0.14.2"
bls-signatures = { version = "0.10.0", default-features = false, features = ["blst"] }
blstrs = { version = "0.3" }
storage-proofs-porep = { version = "~8.0.1", default-features = false }
paired = { version = "0.22.0" }
anyhow = { version = "1.0.42" }
unsigned-varint = "0.7.0"
resize-slice = "0.1.3"
filecoin-hashers = "3.0.3"
serde = { version = "1.0", features = ["rc", "derive"] }
base64-url = "1.4.10"
hyper = "0.14.11"
nats = "0.11.0"
rand="0.8.0"
json = "0.12.4"
rustc-serialize = "0.3.24"

[features]
default = ["pairing", "gpu", "multicore-sdr"]
pairing = ["filecoin-proofs/pairing", "bellperson/pairing", "storage-proofs-porep/pairing"]
blst = ["filecoin-proofs/blst", "bellperson/blst", "storage-proofs-porep/blst"]
blst-portable = ["bls-signatures/blst-portable", "blstrs/portable"]
gpu = ["filecoin-proofs/gpu", "bellperson/gpu", "storage-proofs-porep/gpu"]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]


[patch.crates-io]
bellperson = { path = "../entysnark" , default-features = false }
filecoin-proofs = { path = "../filecoin-proof-debug", default-features = false }




